--- a/main.ipynb
+++ b/main.ipynb
@@ -56,6 +56,7 @@
    },
    "outputs": [],
    "source": [
+    "%env MAKEFLAGS=\"-j$(nproc)\"\n",
     "!pip install numpy torch\n",
     "!pip install flash-attn --no-build-isolation\n",
     "!pip install transformers accelerate optimum auto-gptq huggingface-hub huggingface_hub[hf_transfer] pickleshare safetensors \\\n",
@@ -68,7 +69,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4ed62d2c",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "!pip install python-dotenv supabase"
@@ -78,7 +83,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "81079794",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
@@ -120,8 +129,8 @@
    "source": [
     "# in terminal pip install hf_transfer\n",
     "# !huggingface-cli download black-forest-labs/FLUX.1-dev ae.safetensors\n",
-    "# !huggingface-cli download comfyanonymous/flux_text_encoders clip_l.safetensors\n",
-    "# !huggingface-cli download comfyanonymous/flux_text_encoders t5xxl_fp16.safetensors\n",
+    "!huggingface-cli download comfyanonymous/flux_text_encoders clip_l.safetensors\n",
+    "!huggingface-cli download comfyanonymous/flux_text_encoders t5xxl_fp16.safetensors\n",
     "# !huggingface-cli download kudzueye/boreal-flux-dev-v2 boreal-v2.safetensors\n",
     "# !huggingface-cli download kudzueye/Boreal boreal-flux-dev-lora-v04_1000_steps.safetensors\n",
     "# !huggingface-cli download Shakker-Labs/FLUX.1-dev-LoRA-AntiBlur FLUX-dev-lora-AntiBlur.safetensors\n",
@@ -132,265 +141,94 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d4806ab",
+   "id": "d76e06c6-5440-43aa-b8d7-2ad2d53bb93e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.nn.functional as F\n",
-    "from diffusers import FluxPriorReduxPipeline, FluxPipeline\n",
-    "from diffusers.utils import load_image\n",
+    "%%bash\n",
     "\n",
-    "if \"pipe\" not in globals():\n",
-    "    pipe_prior_redux = FluxPriorReduxPipeline.from_pretrained(\"black-forest-labs/FLUX.1-Redux-dev\", torch_dtype=torch.bfloat16).to(\"cuda\")\n",
-    "    pipe = FluxPipeline.from_pretrained(\"black-forest-labs/FLUX.1-dev\", torch_dtype=torch.bfloat16).to(\"cuda\")\n",
+    "cd /workspace/dtback\n",
+    "git clone -b sd3 https://github.com/kohya-ss/sd-scripts.git\n",
+    "cd sd-scripts\n",
+    "pip install --upgrade -r requirements.txt\n",
+    "mkdir dataset\n",
+    "mkdir loras\n",
     "\n",
-    "image = load_image(\"./base.webp\")\n",
+    "cat > dataset_1024.toml << EOF\n",
+    "[[datasets]]\n",
+    "resolution = 1024\n",
+    "batch_size = 4\n",
+    "keep_tokens = 2\n",
     "\n",
-    "pipe_prior_output = pipe_prior_redux(image)\n",
-    "img_prompt_embeds = pipe_prior_output[\"prompt_embeds\"]\n",
+    "  [[datasets.subsets]]\n",
+    "  image_dir = '/workspace/dtback/sd-scripts/dataset'\n",
+    "  class_tokens = 'a woman'\n",
+    "  num_repeats=10\n",
+    "  face_crop_aug_range=[1.0, 3.0]\n",
+    "EOF\n",
     "\n",
-    "text_prompt = \"woman sitting on an porch\"\n",
-    "text_prompt_embeds, pooled_text_embeds, _ = pipe.encode_prompt(\n",
-    "    prompt=text_prompt,\n",
-    "    prompt_2=text_prompt,\n",
-    "    device=\"cuda\",\n",
-    "    num_images_per_prompt=1,\n",
-    ")\n",
-    "\n",
-    "# Interpolate the text embeddings to match the image embeddings' sequence length.\n",
-    "target_length = img_prompt_embeds.shape[1]  # e.g. 1241\n",
-    "if text_prompt_embeds.shape[1] != target_length:\n",
-    "    # Transpose to (B, embed_dim, seq_length)\n",
-    "    text_prompt_embeds = text_prompt_embeds.transpose(1, 2)\n",
-    "    # Interpolate along the sequence dimension.\n",
-    "    text_prompt_embeds = F.interpolate(text_prompt_embeds, size=target_length, mode='linear', align_corners=False)\n",
-    "    # Transpose back to (B, seq_length, embed_dim)\n",
-    "    text_prompt_embeds = text_prompt_embeds.transpose(1, 2)\n",
-    "\n",
-    "# Blend the embeddings.\n",
-    "alpha = 0.83\n",
-    "blended_embeds = alpha * text_prompt_embeds + (1 - alpha) * img_prompt_embeds\n",
-    "\n",
-    "# For pooled embeddings, you might choose to use one source directly or blend if they are compatible.\n",
-    "# Here, we simply use the pooled text embeddings.\n",
-    "blended_pooled = pooled_text_embeds\n",
-    "\n",
-    "# Now call the Flux pipeline using the blended embeddings.\n",
-    "img = pipe(\n",
-    "    guidance_scale=0,\n",
-    "    num_inference_steps=20,\n",
-    "    generator=torch.Generator(\"cuda\").manual_seed(0),\n",
-    "    prompt_embeds=blended_embeds,\n",
-    "    pooled_prompt_embeds=blended_pooled,\n",
-    "    **{k: v for k, v in pipe_prior_output.items() if k not in [\"prompt_embeds\", \"pooled_prompt_embeds\"]}\n",
-    ").images[0]\n",
-    "\n",
-    "img.show()\n",
-    "img.save(\"redux_blended.webp\")\n"
+    "cd /workspace/dtback"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7d29aa8",
-   "metadata": {},
+   "id": "5b704092-c817-4223-8c52-0b0dd7561f44",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.nn.functional as F\n",
-    "from diffusers import FluxPriorReduxPipeline, FluxPipeline\n",
-    "from diffusers.utils import load_image\n",
-    "\n",
-    "# Load pipelines.\n",
-    "if \"pipe\" not in globals():\n",
-    "    pipe_prior_redux = FluxPriorReduxPipeline.from_pretrained(\"black-forest-labs/FLUX.1-Redux-dev\", torch_dtype=torch.bfloat16).to(\"cuda\")\n",
-    "    pipe = FluxPipeline.from_pretrained(\"black-forest-labs/FLUX.1-dev\", torch_dtype=torch.bfloat16).to(\"cuda\")\n",
-    "\n",
-    "# Load the base (reference) image.\n",
-    "image = load_image(\"./base.webp\")\n",
-    "\n",
-    "# Get image-based conditioning embeddings from the base image.\n",
-    "pipe_prior_output = pipe_prior_redux(image)\n",
-    "img_prompt_embeds = pipe_prior_output[\"prompt_embeds\"]\n",
-    "\n",
-    "# Encode the text prompt.\n",
-    "text_prompt = \"woman riding a bike in the forest\"\n",
-    "text_prompt_embeds, pooled_text_embeds, _ = pipe.encode_prompt(\n",
-    "    prompt=text_prompt,\n",
-    "    prompt_2=text_prompt,\n",
-    "    device=\"cuda\",\n",
-    "    num_images_per_prompt=1,\n",
-    ")\n",
-    "\n",
-    "# Interpolate the text embeddings to match the sequence length of the image embeddings.\n",
-    "target_length = img_prompt_embeds.shape[1]  # e.g. 1241 tokens\n",
-    "if text_prompt_embeds.shape[1] != target_length:\n",
-    "    text_prompt_embeds = text_prompt_embeds.transpose(1, 2)\n",
-    "    text_prompt_embeds = F.interpolate(text_prompt_embeds, size=target_length, mode='linear', align_corners=False)\n",
-    "    text_prompt_embeds = text_prompt_embeds.transpose(1, 2)\n",
-    "\n",
-    "img_weight = 1.5\n",
-    "txt_weight = 5\n",
-    "modified_embeds = txt_weight * text_prompt_embeds + img_weight * img_prompt_embeds\n",
-    "\n",
-    "img = pipe(\n",
-    "    guidance_scale=0,\n",
-    "    num_inference_steps=20,\n",
-    "    generator=torch.Generator(\"cuda\").manual_seed(0),\n",
-    "    prompt_embeds=modified_embeds,\n",
-    "    pooled_prompt_embeds=pooled_text_embeds,\n",
-    "    **{k: v for k, v in pipe_prior_output.items() if k not in [\"prompt_embeds\", \"pooled_prompt_embeds\"]} \n",
-    ").images[0]\n",
-    "\n",
-    "img.show()\n",
-    "\n",
-    "del text_prompt_embeds, pooled_text_embeds, modified_embeds, img_prompt_embeds, pipe_prior_output"
+    "!pip install triton bitsandbytes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2058101b",
-   "metadata": {},
+   "id": "3a64a751-edf7-4b2b-84ef-11aadabac775",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# !huggingface-cli download XLabs-AI/flux-ip-adapter-v2\n",
+    "%%bash\n",
     "\n",
+    "fpath=\"/root/.cache/huggingface/hub/models--black-forest-labs--FLUX.1-dev/snapshots/0ef5fff789c832c5c7f4e127f94c8b54bbcced44\"\n",
+    "epath=\"/root/.cache/huggingface/hub/models--comfyanonymous--flux_text_encoders/snapshots/6af2a98e3f615bdfa612fbd85da93d1ed5f69ef5\"\n",
+    "\n",
+    "accelerate launch --mixed_precision bf16 --num_cpu_threads_per_process 10 sd-scripts/flux_train_network.py \\\n",
+    "--pretrained_model_name_or_path \"${fpath}/flux1-dev.safetensors\" --clip_l \"${epath}/clip_l.safetensors\" --t5xxl \"${epath}/t5xxl_fp16.safetensors\" \\\n",
+    "--ae \"${fpath}/ae.safetensors\" --cache_latents_to_disk --save_model_as safetensors --sdpa --persistent_data_loader_workers \\\n",
+    "--max_data_loader_n_workers 6 --seed 42 --gradient_checkpointing --mixed_precision bf16 --save_precision bf16 \\\n",
+    "--network_module networks.lora_flux --network_dim 4 --network_train_unet_only \\\n",
+    "--optimizer_type adamw8bit --learning_rate 1e-4 \\\n",
+    "--cache_text_encoder_outputs --cache_text_encoder_outputs_to_disk \\\n",
+    "--highvram --max_train_epochs 4 --save_every_n_epochs 1 --dataset_config sd-scripts/dataset_1024.toml \\\n",
+    "--output_dir sd-scripts/loras --output_name wm \\\n",
+    "--timestep_sampling shift --discrete_flow_shift 3.1582 --model_prediction_type raw --guidance_scale 1.0 \\"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ac60914-5b53-4378-ad0b-0efcb948b681",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# test the lora\n",
     "import torch\n",
     "from diffusers import FluxPipeline\n",
-    "from diffusers.utils import load_image\n",
     "\n",
     "if \"pipe\" not in globals():\n",
-    "    pipe = FluxPipeline.from_pretrained(\"black-forest-labs/FLUX.1-dev\", torch_dtype=torch.bfloat16).to(\"cuda\")\n",
-    "\n",
-    "image = load_image(\"./base.webp\")\n",
-    "width, height = image.size\n",
-    "\n",
-    "pipe.load_ip_adapter(\n",
-    "    \"XLabs-AI/flux-ip-adapter-v2\",\n",
-    "    weight_name=\"ip_adapter.safetensors\",\n",
-    "    image_encoder_pretrained_model_name_or_path=\"openai/clip-vit-large-patch14\"\n",
-    ")\n",
-    "pipe.set_ip_adapter_scale(0.0)\n",
-    "\n",
-    "img = pipe(\n",
-    "    width=width,\n",
-    "    height=height,\n",
-    "    prompt=\"riding a horse\",\n",
-    "    negative_prompt=\"smooth, blurry\",\n",
-    "    true_cfg_scale=1.0,\n",
-    "    num_inference_steps=20,\n",
-    "    generator=torch.Generator().manual_seed(1000),\n",
-    "    ip_adapter_image=image,\n",
-    ").images[0]\n",
-    "\n",
-    "img.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5477efcf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %pip uninstall flash-attn -y\n",
-    "# %pip install flash-attn==2.0.3\n",
-    "%env MAKEFLAGS=\"-j$(nproc)\"\n",
-    "%pip install flash-attn --no-build-isolation\n",
-    "%pip install torch facenet-pytorch diffusers transformers protobuf huggingface-hub huggingface_hub[hf_transfer] hf_transfer accelerate peft\n",
-    "\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "from diffusers import FluxPipeline, FluxPriorReduxPipeline\n",
-    "from diffusers.utils import load_image\n",
-    "from facenet_pytorch import MTCNN, InceptionResnetV1\n",
-    "from peft import LoraConfig, get_peft_model\n",
-    "from PIL import Image\n",
-    "import time\n",
-    "\n",
-    "# --- Step 1. Load Flux pipeline and reference image ---\n",
-    "pipe = FluxPipeline.from_pretrained(\"black-forest-labs/FLUX.1-dev\", torch_dtype=torch.bfloat16).to(\"cuda\")\n",
-    "ref_image = load_image(\"./watson.webp\")  # your reference face image\n",
-    "width, height = ref_image.size\n",
-    "\n",
-    "# --- Step 2. Detect and crop face ---\n",
-    "mtcnn = MTCNN(image_size=160, margin=20, device='cuda')\n",
-    "face_crop = mtcnn(ref_image)  # Tensor shape: [3, 160, 160]\n",
-    "if face_crop is None:\n",
-    "    raise ValueError(\"No face detected in the reference image.\")\n",
-    "face_crop = face_crop.to(\"cuda\")\n",
-    "\n",
-    "# --- Step 3. Compute face embedding using InceptionResnetV1 ---\n",
-    "resnet = InceptionResnetV1(pretrained='vggface2').eval().to(\"cuda\")\n",
-    "with torch.no_grad():\n",
-    "    face_embedding = resnet(face_crop.unsqueeze(0))  # Shape: [1, 512]\n",
-    "\n",
-    "# --- Step 4. Map face embedding to target dimension (3072) ---\n",
-    "mapper = nn.Linear(512, 3072).to(\"cuda\")\n",
-    "with torch.no_grad():\n",
-    "    target_face_embedding = mapper(face_embedding)  # Shape: [1, 3072]\n",
-    "\n",
-    "# Create a sequence by repeating the mapped embedding (simulate a token sequence)\n",
-    "seq_len = 10\n",
-    "target = target_face_embedding.unsqueeze(1).repeat(1, seq_len, 1)  # [1, seq_len, 3072]\n",
-    "\n",
-    "# For training, our input (x) and target (y_target) are the same.\n",
-    "x = target.detach()  # Detach to avoid extra gradients.\n",
-    "y_target = x.clone()\n",
-    "\n",
-    "# --- Step 5. Use PEFT to wrap the transformer ---\n",
-    "# We want to adapt the \"to_q\" layers inside the transformer's blocks.\n",
-    "# Define a LoRA configuration; adjust parameters as needed.\n",
-    "lora_config = LoraConfig(\n",
-    "    r=4,\n",
-    "    lora_alpha=32,\n",
-    "    target_modules=[\"to_q\"],\n",
-    "    lora_dropout=0.05,\n",
-    "    bias=\"none\",\n",
-    "    task_type=\"IMAGE_GENERATION\"\n",
-    ")\n",
-    "\n",
-    "# Wrap the transformer with PEFT LoRA adapters.\n",
-    "peft_transformer = get_peft_model(pipe.transformer, lora_config)\n",
-    "pipe.transformer = peft_transformer  # Update the pipeline to use the PEFT-wrapped transformer\n",
-    "\n",
-    "# --- Step 6. Training loop using PEFT ---\n",
-    "optimizer = optim.Adam(peft_transformer.parameters(), lr=1e-5)\n",
-    "num_steps = 10000\n",
-    "start = time.time()\n",
-    "\n",
-    "print(\"Starting training with PEFT...\")\n",
-    "for step in range(num_steps):\n",
-    "    optimizer.zero_grad()\n",
-    "    # Forward pass through the transformer.\n",
-    "    # Here we assume that feeding x (shape: [1, seq_len, 3072]) into the transformer\n",
-    "    # returns a tensor of the same shape. (In practice, you may need to isolate the target layer's output.)\n",
-    "    y_adapted = peft_transformer(x)  \n",
-    "    loss = ((y_adapted - y_target) ** 2).mean()  # MSE loss (replace with a stronger identity loss in practice)\n",
-    "    loss.backward()\n",
-    "    optimizer.step()\n",
-    "    if step % 10 == 0:\n",
-    "        print(f\"Step {step}: Loss = {loss.item()}\")\n",
-    "\n",
-    "print(f\"Training completed in {time.time() - start:.2f} seconds.\")\n",
-    "\n",
-    "with torch.no_grad():\n",
-    "    final_output = peft_transformer(x)\n",
-    "    diff = (final_output - y_target).abs().mean().item()\n",
-    "    print(\"Mean absolute difference after training:\", diff)\n",
-    "\n",
-    "# --- Step 7. Generate an image using the modified pipeline ---\n",
-    "img = pipe(\n",
-    "    prompt=\"a portrait of a futuristic cyborg with striking facial features\",\n",
-    "    width=width,\n",
-    "    height=height,\n",
-    "    num_inference_steps=20,\n",
-    "    generator=torch.Generator(\"cuda\").manual_seed(42)\n",
-    ").images[0]\n",
-    "\n",
+    "    pipe = FluxPipeline.from_pretrained(\"black-forest-labs/FLUX.1-dev\", device_map=\"balanced\", torch_dtype=torch.bfloat16)\n",
+    "    pipe.load_lora_weights(\"/workspace/dtback/sd-scripts/loras\", weight_name=\"wm.safetensors\", adapter_name=\"wm\")\n",
+    "    pipe.set_adapters(\"wm\", 1)\n",
+    "    pipe.fuse_lora()\n",
+    "base_prompt = \"photo of a woman\"\n",
+    "img = pipe(prompt=base_prompt, guidance_scale=0, height=1280, width=1024, num_inference_steps=30,\n",
+    "           generator=torch.Generator(\"cuda\").manual_seed(1000)).images[0]\n",
     "img.show()"
    ]
   },
@@ -414,7 +252,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5717453c",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -908,7 +750,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -922,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
