--- a/main.ipynb
+++ b/main.ipynb
@@ -154,6 +154,7 @@
     "mkdir dataset\n",
     "mkdir loras\n",
     "\n",
+    "\n",
     "cat > dataset_1024.toml << EOF\n",
     "[[datasets]]\n",
     "resolution = 1024\n",
@@ -164,7 +165,32 @@
     "  image_dir = '/workspace/dtback/sd-scripts/dataset'\n",
     "  class_tokens = 'a woman'\n",
     "  num_repeats=10\n",
-    "  face_crop_aug_range=[1.0, 3.0]\n",
+    "  face_crop_aug_range=[1.0, 1.5]\n",
+    "  flip_aug=true\n",
+    "  color_aug=false\n",
+    "EOF\n",
+    "\n",
+    "\n",
+    "cat > /root/.cache/huggingface/accelerate/default_config.yaml << EOF\n",
+    "compute_environment: LOCAL_MACHINE\n",
+    "debug: false\n",
+    "distributed_type: 'NO'\n",
+    "downcast_bf16: 'no'\n",
+    "dynamo_config:\n",
+    "  dynamo_backend: TENSORRT\n",
+    "enable_cpu_affinity: true\n",
+    "gpu_ids: all\n",
+    "machine_rank: 0\n",
+    "main_training_function: main\n",
+    "mixed_precision: bf16\n",
+    "num_machines: 1\n",
+    "num_processes: 1\n",
+    "rdzv_backend: static\n",
+    "same_network: true\n",
+    "tpu_env: []\n",
+    "tpu_use_cluster: false\n",
+    "tpu_use_sudo: false\n",
+    "use_cpu: false\n",
     "EOF\n",
     "\n",
     "cd /workspace/dtback"
@@ -179,7 +205,8 @@
    },
    "outputs": [],
    "source": [
-    "!pip install triton bitsandbytes"
+    "!pip install bitsandbytes torchvision\n",
+    "!pip install --force-reinstall -v \"triton==3.1.0\""
    ]
   },
   {
@@ -201,10 +228,10 @@
     "--ae \"${fpath}/ae.safetensors\" --cache_latents_to_disk --save_model_as safetensors --sdpa --persistent_data_loader_workers \\\n",
     "--max_data_loader_n_workers 6 --seed 42 --gradient_checkpointing --mixed_precision bf16 --save_precision bf16 \\\n",
     "--network_module networks.lora_flux --network_dim 4 --network_train_unet_only \\\n",
-    "--optimizer_type adamw8bit --learning_rate 1e-4 \\\n",
+    "--optimizer_type adamw8bit --learning_rate 4e-5 \\\n",
     "--cache_text_encoder_outputs --cache_text_encoder_outputs_to_disk \\\n",
-    "--highvram --max_train_epochs 4 --save_every_n_epochs 1 --dataset_config sd-scripts/dataset_1024.toml \\\n",
-    "--output_dir sd-scripts/loras --output_name wm \\\n",
+    "--highvram --max_train_epochs 20 --save_every_n_epochs 5 --dataset_config sd-scripts/dataset_1024.toml \\\n",
+    "--output_dir sd-scripts/loras --output_name wm  --lr_scheduler_type cosine_with_min_lr --lr_warmup_steps 10% --lr_decay_steps 90% \\\n",
     "--timestep_sampling shift --discrete_flow_shift 3.1582 --model_prediction_type raw --guidance_scale 1.0 \\"
    ]
   },
