--- a/main.ipynb
+++ b/main.ipynb
@@ -142,7 +142,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d76e06c6-5440-43aa-b8d7-2ad2d53bb93e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%%bash\n",
@@ -158,8 +160,8 @@
     "cat > dataset_1024.toml << EOF\n",
     "[[datasets]]\n",
     "resolution = 1024\n",
-    "batch_size = 4\n",
-    "keep_tokens = 2\n",
+    "batch_size = 8\n",
+    "keep_tokens = 1\n",
     "\n",
     "  [[datasets.subsets]]\n",
     "  image_dir = '/workspace/dtback/sd-scripts/dataset'\n",
@@ -193,20 +195,11 @@
     "use_cpu: false\n",
     "EOF\n",
     "\n",
-    "cd /workspace/dtback"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b704092-c817-4223-8c52-0b0dd7561f44",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "!pip install bitsandbytes torchvision\n",
-    "!pip install --force-reinstall -v \"triton==3.1.0\""
+    "cd /workspace/dtback\n",
+    "\n",
+    "pip install bitsandbytes torchvision\n",
+    "pip install --force-reinstall -v \"triton==3.1.0\"\n",
+    "pip install --upgrade transformers diffusers huggingface_hub"
    ]
   },
   {
@@ -231,7 +224,7 @@
     "--optimizer_type adamw8bit --learning_rate 4e-5 \\\n",
     "--cache_text_encoder_outputs --cache_text_encoder_outputs_to_disk \\\n",
     "--highvram --max_train_epochs 20 --save_every_n_epochs 5 --dataset_config sd-scripts/dataset_1024.toml \\\n",
-    "--output_dir sd-scripts/loras --output_name wm  --lr_scheduler_type cosine_with_min_lr --lr_warmup_steps 10% --lr_decay_steps 90% \\\n",
+    "--output_dir sd-scripts/loras --output_name wm \\\n",
     "--timestep_sampling shift --discrete_flow_shift 3.1582 --model_prediction_type raw --guidance_scale 1.0 \\"
    ]
   },
