--- a/main.ipynb
+++ b/main.ipynb
@@ -154,22 +154,22 @@
     "cd sd-scripts\n",
     "pip install --upgrade -r requirements.txt\n",
     "mkdir dataset\n",
+    "cd dataset\n",
+    "curl -O https://i.ibb.co/dwccwKCZ/watson.png\n",
+    "cd ..\n",
     "mkdir loras\n",
     "\n",
     "\n",
     "cat > dataset_1024.toml << EOF\n",
     "[[datasets]]\n",
     "resolution = 1024\n",
-    "batch_size = 8\n",
+    "batch_size = 4\n",
     "keep_tokens = 1\n",
     "\n",
     "  [[datasets.subsets]]\n",
     "  image_dir = '/workspace/dtback/sd-scripts/dataset'\n",
-    "  class_tokens = 'a woman'\n",
-    "  num_repeats=10\n",
-    "  face_crop_aug_range=[1.0, 1.5]\n",
-    "  flip_aug=true\n",
-    "  color_aug=false\n",
+    "  class_tokens = 'woman'\n",
+    "  num_repeats=100\n",
     "EOF\n",
     "\n",
     "\n",
@@ -220,34 +220,34 @@
     "--pretrained_model_name_or_path \"${fpath}/flux1-dev.safetensors\" --clip_l \"${epath}/clip_l.safetensors\" --t5xxl \"${epath}/t5xxl_fp16.safetensors\" \\\n",
     "--ae \"${fpath}/ae.safetensors\" --cache_latents_to_disk --save_model_as safetensors --sdpa --persistent_data_loader_workers \\\n",
     "--max_data_loader_n_workers 6 --seed 42 --gradient_checkpointing --mixed_precision bf16 --save_precision bf16 \\\n",
-    "--network_module networks.lora_flux --network_dim 4 --network_train_unet_only \\\n",
-    "--optimizer_type adamw8bit --learning_rate 4e-5 \\\n",
+    "--network_module networks.lora_flux --network_dim 128 --network_train_unet_only \\\n",
+    "--optimizer_type adamw8bit --learning_rate 1e-3 \\\n",
     "--cache_text_encoder_outputs --cache_text_encoder_outputs_to_disk \\\n",
     "--highvram --max_train_epochs 20 --save_every_n_epochs 5 --dataset_config sd-scripts/dataset_1024.toml \\\n",
     "--output_dir sd-scripts/loras --output_name wm \\\n",
-    "--timestep_sampling shift --discrete_flow_shift 3.1582 --model_prediction_type raw --guidance_scale 1.0 \\"
+    "--timestep_sampling shift --discrete_flow_shift 3.1582 --model_prediction_type raw --guidance_scale 1.0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9ac60914-5b53-4378-ad0b-0efcb948b681",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# test the lora\n",
+    "# !pip install peft\n",
     "import torch\n",
     "from diffusers import FluxPipeline\n",
     "\n",
     "if \"pipe\" not in globals():\n",
     "    pipe = FluxPipeline.from_pretrained(\"black-forest-labs/FLUX.1-dev\", device_map=\"balanced\", torch_dtype=torch.bfloat16)\n",
-    "    pipe.load_lora_weights(\"/workspace/dtback/sd-scripts/loras\", weight_name=\"wm.safetensors\", adapter_name=\"wm\")\n",
-    "    pipe.set_adapters(\"wm\", 1)\n",
+    "    pipe.load_lora_weights(\"/workspace/dtback/sd-scripts/loras\", weight_name=\"wm-000010.safetensors\", adapter_name=\"wm\")\n",
+    "    pipe.load_lora_weights(\"kudzueye/Boreal\", weight_name=\"boreal-flux-dev-lora-v04_1000_steps.safetensors\", adapter_name=\"boreal\")\n",
+    "    pipe.set_adapters([\"boreal\", \"wm\"], [0.7, 0.1])\n",
     "    pipe.fuse_lora()\n",
-    "base_prompt = \"photo of a woman\"\n",
-    "img = pipe(prompt=base_prompt, guidance_scale=0, height=1280, width=1024, num_inference_steps=30,\n",
+    "base_prompt = \"woman riding a horse\"\n",
+    "img = pipe(prompt=base_prompt, guidance_scale=0, height=1280, width=1024, num_inference_steps=20,\n",
     "           generator=torch.Generator(\"cuda\").manual_seed(1000)).images[0]\n",
     "img.show()"
    ]
