--- a/main.ipynb
+++ b/main.ipynb
@@ -155,7 +155,8 @@
     "pip install --upgrade -r requirements.txt\n",
     "mkdir dataset\n",
     "cd dataset\n",
-    "curl -O https://i.ibb.co/dwccwKCZ/watson.png\n",
+    "# curl -O https://i.ibb.co/dwccwKCZ/watson.png # 1024\n",
+    "curl -O https://i.ibb.co/35PNsSrg/watson-512.png # 512\n",
     "cd ..\n",
     "mkdir loras\n",
     "\n",
@@ -199,7 +200,7 @@
     "\n",
     "pip install bitsandbytes torchvision\n",
     "pip install --force-reinstall -v \"triton==3.1.0\"\n",
-    "pip install --upgrade transformers diffusers huggingface_hub"
+    "pip install --upgrade transformers diffusers huggingface_hub peft"
    ]
   },
   {
@@ -217,15 +218,11 @@
     "epath=\"/root/.cache/huggingface/hub/models--comfyanonymous--flux_text_encoders/snapshots/6af2a98e3f615bdfa612fbd85da93d1ed5f69ef5\"\n",
     "\n",
     "accelerate launch --mixed_precision bf16 --num_cpu_threads_per_process 10 sd-scripts/flux_train_network.py \\\n",
-    "--pretrained_model_name_or_path \"${fpath}/flux1-dev.safetensors\" --clip_l \"${epath}/clip_l.safetensors\" --t5xxl \"${epath}/t5xxl_fp16.safetensors\" \\\n",
-    "--ae \"${fpath}/ae.safetensors\" --cache_latents_to_disk --save_model_as safetensors --sdpa --persistent_data_loader_workers \\\n",
-    "--max_data_loader_n_workers 6 --seed 42 --gradient_checkpointing --mixed_precision bf16 --save_precision bf16 \\\n",
-    "--network_module networks.lora_flux --network_dim 128 --network_train_unet_only \\\n",
-    "--optimizer_type adamw8bit --learning_rate 1e-3 \\\n",
-    "--cache_text_encoder_outputs --cache_text_encoder_outputs_to_disk \\\n",
-    "--highvram --max_train_epochs 20 --save_every_n_epochs 5 --dataset_config sd-scripts/dataset_1024.toml \\\n",
-    "--output_dir sd-scripts/loras --output_name wm \\\n",
-    "--timestep_sampling shift --discrete_flow_shift 3.1582 --model_prediction_type raw --guidance_scale 1.0"
+    "--pretrained_model_name_or_path \"${fpath}/flux1-dev.safetensors\" --clip_l \"${epath}/clip_l.safetensors\" --t5xxl \"${epath}/t5xxl_fp16.safetensors\" --ae \"${fpath}/ae.safetensors\" \\\n",
+    "--cache_latents_to_disk --save_model_as safetensors --sdpa --persistent_data_loader_workers --max_data_loader_n_workers 10 --seed 42 --gradient_checkpointing --mixed_precision bf16 \\\n",
+    "--save_precision bf16 --network_module networks.lora_flux --network_dim 4 --network_train_unet_only --optimizer_type adamw8bit --learning_rate 4e-3 --cache_text_encoder_outputs \\\n",
+    "--highvram --max_train_epochs 5 --save_every_n_epochs 1 --dataset_config sd-scripts/dataset_1024.toml --output_dir sd-scripts/loras --output_name wm --timestep_sampling shift \\\n",
+    "--discrete_flow_shift 3.1582 --model_prediction_type raw --guidance_scale 1.0"
    ]
   },
   {
@@ -236,17 +233,16 @@
    "outputs": [],
    "source": [
     "# test the lora\n",
-    "# !pip install peft\n",
     "import torch\n",
     "from diffusers import FluxPipeline\n",
     "\n",
     "if \"pipe\" not in globals():\n",
     "    pipe = FluxPipeline.from_pretrained(\"black-forest-labs/FLUX.1-dev\", device_map=\"balanced\", torch_dtype=torch.bfloat16)\n",
-    "    pipe.load_lora_weights(\"/workspace/dtback/sd-scripts/loras\", weight_name=\"wm-000010.safetensors\", adapter_name=\"wm\")\n",
+    "    pipe.load_lora_weights(\"/workspace/dtback/sd-scripts/loras\", weight_name=\"wm.safetensors\", adapter_name=\"wm\")\n",
     "    pipe.load_lora_weights(\"kudzueye/Boreal\", weight_name=\"boreal-flux-dev-lora-v04_1000_steps.safetensors\", adapter_name=\"boreal\")\n",
-    "    pipe.set_adapters([\"boreal\", \"wm\"], [0.7, 0.1])\n",
+    "    pipe.set_adapters([\"boreal\", \"wm\"], [0.7, 0.5])\n",
     "    pipe.fuse_lora()\n",
-    "base_prompt = \"woman riding a horse\"\n",
+    "base_prompt = \"selfie of a woman in a desert\"\n",
     "img = pipe(prompt=base_prompt, guidance_scale=0, height=1280, width=1024, num_inference_steps=20,\n",
     "           generator=torch.Generator(\"cuda\").manual_seed(1000)).images[0]\n",
     "img.show()"
