--- a/main.ipynb
+++ b/main.ipynb
@@ -163,14 +163,16 @@
     "\n",
     "cat > dataset_1024.toml << EOF\n",
     "[[datasets]]\n",
-    "resolution = 1024\n",
+    "resolution = 512\n",
     "batch_size = 4\n",
     "keep_tokens = 1\n",
     "\n",
     "  [[datasets.subsets]]\n",
     "  image_dir = '/workspace/dtback/sd-scripts/dataset'\n",
     "  class_tokens = 'woman'\n",
-    "  num_repeats=100\n",
+    "  num_repeats = 30\n",
+    "  flip_aug = true\n",
+    "  face_crop_aug_range=[1.0, 1.5]\n",
     "EOF\n",
     "\n",
     "\n",
@@ -206,6 +208,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2aa39594-e24f-4594-a9b0-cc6bf2687614",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "!pip install bitsandbytes torchvision\n",
+    "!pip install --upgrade transformers diffusers huggingface_hub peft\n",
+    "!pip install --force-reinstall -v \"triton==3.1.0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3a64a751-edf7-4b2b-84ef-11aadabac775",
    "metadata": {
     "scrolled": true
@@ -220,9 +236,9 @@
     "accelerate launch --mixed_precision bf16 --num_cpu_threads_per_process 10 sd-scripts/flux_train_network.py \\\n",
     "--pretrained_model_name_or_path \"${fpath}/flux1-dev.safetensors\" --clip_l \"${epath}/clip_l.safetensors\" --t5xxl \"${epath}/t5xxl_fp16.safetensors\" --ae \"${fpath}/ae.safetensors\" \\\n",
     "--cache_latents_to_disk --save_model_as safetensors --sdpa --persistent_data_loader_workers --max_data_loader_n_workers 10 --seed 42 --gradient_checkpointing --mixed_precision bf16 \\\n",
-    "--save_precision bf16 --network_module networks.lora_flux --network_dim 4 --network_train_unet_only --optimizer_type adamw8bit --learning_rate 4e-3 --cache_text_encoder_outputs \\\n",
+    "--save_precision bf16 --network_module networks.lora_flux --network_dim 8 --network_train_unet_only --optimizer_type adamw8bit --learning_rate 4e-3 --cache_text_encoder_outputs \\\n",
     "--highvram --max_train_epochs 5 --save_every_n_epochs 1 --dataset_config sd-scripts/dataset_1024.toml --output_dir sd-scripts/loras --output_name wm --timestep_sampling shift \\\n",
-    "--discrete_flow_shift 3.1582 --model_prediction_type raw --guidance_scale 1.0"
+    "--discrete_flow_shift 3.1582 --model_prediction_type raw --guidance_scale 0.0"
    ]
   },
   {
@@ -240,28 +256,12 @@
     "    pipe = FluxPipeline.from_pretrained(\"black-forest-labs/FLUX.1-dev\", device_map=\"balanced\", torch_dtype=torch.bfloat16)\n",
     "    pipe.load_lora_weights(\"/workspace/dtback/sd-scripts/loras\", weight_name=\"wm.safetensors\", adapter_name=\"wm\")\n",
     "    pipe.load_lora_weights(\"kudzueye/Boreal\", weight_name=\"boreal-flux-dev-lora-v04_1000_steps.safetensors\", adapter_name=\"boreal\")\n",
-    "    pipe.set_adapters([\"boreal\", \"wm\"], [0.7, 0.5])\n",
+    "    pipe.set_adapters([\"boreal\", \"wm\"], [0.7, 0.7])\n",
     "    pipe.fuse_lora()\n",
-    "base_prompt = \"selfie of a woman in a desert\"\n",
+    "base_prompt = \"fullbody candid photo of a nude woman showering\"\n",
     "img = pipe(prompt=base_prompt, guidance_scale=0, height=1280, width=1024, num_inference_steps=20,\n",
     "           generator=torch.Generator(\"cuda\").manual_seed(1000)).images[0]\n",
     "img.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e45b9a46",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img = pipe(\n",
-    "    prompt=\"photo of a woman riding a horse\",\n",
-    "    width=width,\n",
-    "    height=height,\n",
-    "    num_inference_steps=20,\n",
-    "    generator=torch.Generator(\"cuda\").manual_seed(42)\n",
-    ").images[0]"
    ]
   },
   {
@@ -332,44 +332,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16c38e89",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "from diffusers import FluxPipeline\n",
-    "\n",
-    "if \"pipe\" not in globals():\n",
-    "    pipe = FluxPipeline.from_pretrained(\"black-forest-labs/FLUX.1-dev\", device_map=\"balanced\", torch_dtype=torch.bfloat16)\n",
-    "\n",
-    "prompt= \"a portrait of a futuristic cyborg with striking facial features\"\n",
-    "img = pipe(prompt=prompt, guidance_scale=0, height=1280, width=1024, num_inference_steps=20,\n",
-    "           generator=torch.Generator(\"cuda\").manual_seed(42)).images[0]\n",
-    "img.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a6bf1a3e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# generate the base\n",
+    "# %cd /workspace/dtback/models/img/loras/ # sameface lora is not neede with boreal\n",
+    "# !curl -L -J -O \"https://drive.google.com/uc?export=download&id=1UNuErS3bvfOUwGqGAPU0AA8hXKEOKKyD\"\n",
+    "# %cd /workspace/dtback/\n",
+    "\n",
     "import torch\n",
     "from diffusers import FluxPipeline\n",
     "\n",
     "if \"pipe\" not in globals():\n",
     "    pipe = FluxPipeline.from_pretrained(\"black-forest-labs/FLUX.1-dev\", device_map=\"balanced\", torch_dtype=torch.bfloat16)\n",
     "    pipe.load_lora_weights(\"kudzueye/Boreal\", weight_name=\"boreal-flux-dev-lora-v04_1000_steps.safetensors\", adapter_name=\"boreal\")\n",
-    "    pipe.load_lora_weights(\"/workspace/dtback/models/img/loras/sameface.safetensors\", adapter_name=\"sameface\")\n",
-    "    pipe.set_adapters([\"boreal\", \"sameface\"], [0.7, -0.2])\n",
+    "    pipe.set_adapters([\"boreal\"], [0.7])\n",
     "    pipe.fuse_lora()\n",
-    "base_prompt = \"photo of a young redhead woman with unique facial features wearing underwear\"\n",
-    "img = pipe(prompt=base_prompt, guidance_scale=0, height=1280, width=1024, num_inference_steps=30,\n",
-    "           generator=torch.Generator(\"cuda\").manual_seed(1000)).images[0]\n",
+    "base_prompt = \"medium shot photo of a young MTFSK72GFD8 woman with pink hair wearing underwear on an evenly colored green background\"\n",
+    "img = pipe(prompt=base_prompt, guidance_scale=0, height=1280, width=1024, num_inference_steps=20,\n",
+    "           generator=torch.Generator(\"cuda\").manual_seed(10001)).images[0]\n",
     "img.show()\n",
     "img.save(f'out.webp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6d81dbe-a9c7-4d14-aa28-f29f5bdae58b",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "!pip install \"rembg[gpu,cli]\" onnxruntime\n",
+    "!rembg i out.webp output.png \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "094e2833-b6c3-4b0b-ac09-f1845c23f348",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/PeterL1n/BackgroundMattingV2.git\n",
+    "%cd BackgroundMattingV2\n",
+    "!pip install -r requirements.txt"
    ]
   },
   {
